# FastEvents

./: .gitignore  LICENSE  README.md  README.zh-CN.md  demo.py  pyproject.toml  verify_rpc_di.py
.devin/: wiki.json
_deprecated/: ai_api_demo.py  demo.py  listen_request_demo.py  main.py
_deprecated/docs/: development-plan.md
docs/: bus-and-runtime.md  core-concepts.md  dependency-injection.md  development-plan.md  events-and-propagation.md  getting-started.md  index.md  rfc.md  rpc-extension.md
fastevents/: __init__.py  app.py  bus.py  dispatcher.py  events.py  exceptions.py  extensions.py  models.py  subscribers.py  subscription.py
fastevents/ext/: __init__.py  rpc.py
tests/: test_fastevents.py  verify_rpc_di.py
