[project]
name = "fastevents"
version = "0.9.0"
description = "Lightweight asyncio event framework with layered propagation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2"]

# [tool.setuptools]
# packages = ["fastevents"]

# [dependency-groups]
# dev = [
#     "fastapi>=0.115",
#     "uvicorn>=0.30",
# ]
